# Stock-tradingV3

./: .gitignore  README.md
.github/workflows/: ci.yml
analysis_engine/: __init__.py  pyproject.toml
analysis_engine/engine/: __init__.py  backtesting.py  data_loader.py  indicators.py  ranking.py  service.py
analysis_engine/tests/: test_ranking.py
backend/: __init__.py  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  alerts.py  recommendations.py  reporting.py  watchlists.py
backend/app/core/: logging.py  settings.py
backend/app/models/: token.py
backend/app/pipelines/: data_pipeline.py
backend/app/schemas/: common.py
backend/app/services/: cache.py  grpc_server.py  market_data.py  notifications.py  portfolio.py  rules.py
backend/tests/: test_cache.py  test_rules.py
desktop/: electron-builder.yml  electron-main.js  index.html  package.json  preload.js  tsconfig.json
desktop/src/: main.tsx  styles.css  translations.ts  types.d.ts
desktop/src/__tests__/: translations.test.ts
desktop/src/components/: Disclaimer.tsx
desktop/src/pages/: App.tsx  Dashboard.tsx  Recommendations.tsx  Settings.tsx  StockDetail.tsx  Watchlist.tsx
docs/: README.md  configuration.md
infrastructure/: README.md
scripts/: dev-analysis.sh  dev-backend.sh  dev-desktop.sh
tests/: test_e2e.py
